feat: add hover to header links

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ a {
   color: inherit;
 }
 
+p {
+  margin: 0;
+}
+
 /* HEADER */
 .header {
   color: #403F3D;
@@ -47,11 +51,25 @@ a {
   column-gap: 40px;
 }
 
+.nav__link:hover {
+  text-decoration: underline;
+}
+
 .menu {
   display: flex;
   align-items: center;
+  position: relative;
   margin-right: 40px;
   cursor: pointer;
+}
+
+.menu:hover:after {
+  content: '';
+  position: absolute;
+  background-color: #403F3D;
+  width: 100%;
+  height: 2px;
+  bottom: -4px;
 }
 
 .menu__img {
