--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ h6 {
 /* SECTION ENJOY */
 .enjoy {
   color: #E1D4C9;
+  margin-bottom: 92px;
 }
 
 .enjoy__container {
@@ -151,4 +152,72 @@ h6 {
 
 .enjoy__empty-contant {
   width: 630px;
+}
+
+/* FACOURITES_COFFEE SECTION */
+.favourites-coffee {
+  color: #403F3D;
+}
+
+.favorites-coffee__title {
+  text-align: center;
+  font-size: 60px;
+  line-height: 125%;
+  margin-bottom: 39px;
+}
+
+.card__wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  column-gap: 290px;
+}
+
+.card {
+  width: 480px;
+}
+
+.card__img {
+  margin-bottom: 19px;
+}
+
+.card__title,
+.card__price {
+  text-align: center;
+  font-size: 24px;
+  line-height: 125%;
+}
+
+.card__title {
+  margin-bottom: 12px;
+}
+
+.card__text {
+  text-align: center;
+  line-height: 150%;
+  margin-bottom: 19px;
+}
+
+.switcher {
+  display: flex;
+  justify-content: space-between;
+  max-width: 146px;
+  margin: 0 auto;
+  padding-top: 39px;
+}
+
+.switcher__div1,
+.switcher__div2,
+.switcher__div3 {
+  width: 40px;
+  height: 4px;
+}
+
+.switcher__div1 {
+  background-color: #665F55;
+}
+
+.switcher__div2,
+.switcher__div3 {
+  background-color: #C1B6AD;
 }
