--- a/style.css
+++ b/style.css
@@ -223,9 +223,15 @@ h6 {
   background-color: #C1B6AD;
 }
 
+.arrow-right,
+.arrow-left {
+  cursor: pointer;
+}
+
 /* ABOUT */
 .about {
   color: #403F3D;
+  margin-bottom: 240px;
 }
 
 .about__title {
@@ -251,4 +257,73 @@ h6 {
 
 .gellery__img {
   border-radius: 20px;
+}
+
+/* MOBILE-APP SECTION */
+.mobile-app {
+  color: #403F3D;
+}
+
+.mobile-app__container {
+  display: flex;
+  column-gap: 100px;
+}
+
+.mobile-app__content {
+  width: 630px;
+  margin-left: 40px;
+}
+
+.mobile-app__title {
+  font-size: 60px;
+  line-height: 125%;
+  margin-bottom: 40px;
+}
+
+.mobile-app__text {
+  line-height: 150%;
+  margin-bottom: 40px;
+}
+
+.mobile-app__btn-container {
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  border: 1px solid #665F55;
+  border-radius: 100px;
+  width: 200px;
+  height: 64px;
+  margin-right: 16px;
+}
+
+.mobile-app__btn-img {
+  position: absolute;
+  top: 12px;
+  left: 20px;
+}
+
+.mobile-app__text-sup {
+  position: absolute;
+  top: 11px;
+  left: 63px;
+  font-size: 10px;
+  font-weight: 600;
+  line-height: 140%;
+}
+
+.mobile-app__text-sub {
+  position: absolute;
+  top: 26px;
+  left: 63px;
+  font-weight: 600;
+  line-height: 150%;
+}
+
+.mobile-app__img-container {
+  position: relative;
+}
+
+.mobile-app__img {
+  position: absolute;
+  top: -145px;
 }
