--- a/style.css
+++ b/style.css
@@ -403,6 +403,7 @@ h6 {
 /* OFFER */
 .offer {
   margin-top: 20px;
+  margin-bottom: 43px;
 }
 
 .offer__title {
@@ -475,4 +476,44 @@ h6 {
 .active {
   background-color: #665F55;
   color: #E1D4C9;
+}
+
+/* TABLE */
+.table__container {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 40px;
+  row-gap: 40px;
+  margin-left: 102px;
+}
+
+.table__item {
+  width: 310px;
+}
+
+.table__title {
+  color: #403F3D;
+  font-size: 24px;
+  line-height: 125%;
+  margin-bottom: 14px;
+}
+
+.table__text {
+  width: 253px;
+  line-height: 150%;
+  color: #403F3D;
+  margin-bottom: 38px;
+}
+
+.table__img {
+  border-radius: 40px;
+  margin-bottom: 15px;
+}
+
+.margin-block {
+  margin-left: 25px;
+}
+
+.uni {
+  margin-bottom: 61px;
 }
