--- a/style.css
+++ b/style.css
@@ -133,6 +133,9 @@ h6 {
 
 .enjoy__btn {
   position: relative;
+  display: block;
+  text-align: center;
+  padding-top: 22px;
   width: 200px;
   height: 64px;
   font-weight: 600;
@@ -147,7 +150,7 @@ h6 {
   content: url(assets/img/header/coffee-cup.png);
   position: absolute;
   left: 128px;
-  
+
 }
 
 .enjoy__empty-contant {
@@ -352,7 +355,7 @@ h6 {
   margin-bottom: 40px;
 }
 
-.social__list{
+.social__list {
   display: flex;
 }
 
@@ -500,7 +503,6 @@ h6 {
 }
 
 .table__text {
-  width: 253px;
   line-height: 150%;
   color: #403F3D;
   margin-bottom: 38px;
@@ -517,4 +519,25 @@ h6 {
 
 .uni {
   margin-bottom: 61px;
+}
+
+.menu-lock {
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-right: 40px;
+}
+
+.menu-lock:after {
+  content: '';
+  position: absolute;
+  background-color: #403F3D;
+  width: 100%;
+  height: 2px;
+  bottom: -4px;
+}
+
+.menu-lock__img {
+  display: block;
+  margin-left: 10px;
 }
